<resources>
    <string name="app_name">Plantapp</string>
    <string name="login">Inicio de Sesión</string>
    <string name="correo">Correo:</string>
    <string name="contra">Contraseña:</string>
    <string name="contra3">Confirmar Contraseña:</string>
    <string name="usuario">Usuario:</string>
    <string name="guardar">Guardar</string>
    <string name="leermas">Leer más</string>
    <string name="respuesta">Respuesta:</string>
    <string name="pregunta">Pregunta de Seguridad:</string>
    <string name="contra2">Recuperar Contraseña</string>
    <string name="login2">Inicio de Sesión</string>
    <string name="registro">Registro</string>
    <string name="volver">Volver</string>
    <string name="Verificar">Verificar</string>
    <string name="info">Información</string>
    <string name="info2">¿Que es Plantapp?</string>
    <string name="info3">Plantapp es una aplicación para dispositivos móviles que te ayuda en el control del riego de tus plantas</string>
    <string name="desc">Image</string>
    <string name="Registrop">Registro de la planta</string>
    <string name="preguntarp">Seleccione el tipo de planta</string>
    <string name="insert">Inserte el sensor</string>
    <string name="infoplant">Informacion de la planta</string>
    <string name="titulozanahoria">Zanahoria, Daucus Carota /Umbelliferae (Apiacae)</string>
    <string name="txtzanahoria">La zanahoria es una de las hortalizas más cultivadas en el mundo. La parte consumida de la zanahoria es su raíz, de la que existen múltiples formas y sabores. Destaca por su contenido en caroteno y vitaminas A, B y C.</string>
    <string name="txtzanahoria2">La zanahoria es rica en caroteno, sustancia precursora de la vitamina A, necesaria en el crecimiento, desarrollo de huesos, vista, mantenimiento de los tejidos, reproducción y en el sistema hormonal. Además, se cree que previene contra el cáncer, aparte de ser un alimento rico en fibra y bajo en calorías.</string>
    <string name="txtzanahoria3">Ingerir zanahorias aderezadas con zumo de limón a diario o con frecuencia, es de gran ayuda para conservar sana la piel, el cabello y la vista</string>
    <string name="titulocalabaza">La calabaza (Cucurbita sp.)Cucurbita maxima</string>
    <string name="titulocalabaza2">Cómo cultivar la calabaza</string>
    <string name="titulocalabaza3">Beneficios y usos</string>
    <string name="txtcalabaza">Es originaria de América, existen más de 3000 variedades en el mundo. Esta verdura es mundialmente consumida en una gran diversidad de platillos. Contiene vitamina A, C y E, potasio, calcio, hierro, es baja en carbohidratos y es una buena fuente de fibra. </string>
    <string name="txtcalabaza2">Las calabazas se pueden cultivar en primavera u otoño, dependiendo de la variedad. Lo más común en México es cultivar las calabacitas en primavera. Las semillas de calabaza son color café claro, ovaladas y planas, su tamaño varía dependiendo de la variedad.</string>
    <string name="txtcalabaza3">Las calabazas son una excelente fuente de fibra, contienen vitamina A, C, E, B, potasio, cobre, hierro y fósforo.  Consumir una taza de calabaza al día provee los requerimientos diarios de vitamina A. Se puede emplear para hacer: Sopa de calabaza, Espagueti de calabaza con pesto de aguacate, Pay de calabaza, etc...</string>
    <string name="titulomaiz">Maíz (Zea mays)</string>
    <string name="txtmaiz">El maíz pertenece al reino de las plantas, es una gramínea, es decir, de la familia de las Poaceae y la especie como tal se denomina Zea mays. Es muy parecido a un pasto común, de esos que tenemos en los jardines</string>
    <string name="txtmaiz2">Muchos los desechan y no conocen sus beneficios, pero los pelos de elote son de las partes y características del maíz que no deben despreciables ya que se ha demostrado que tiene múltiples usos. Para los que no saben que son: Se le denomina pelos de elote a los hilos que se encuentran alrededor de la mazorca y entre las hileras de granos.</string>
    <string name="txtmaiz3">Entre los beneficios que se conocen están su potencial para ayudar a disminuir la presión arterial, el colesterol. Ayudan también a un buen control de la diabetes, para dolores de estómago, y otras molestias como el estreñimiento. Además son buenos para problemas renales y ayudan en la limpieza de las vías urinarias.</string>
    <string name="spinner">Tipos</string>
    <string name="tituloorquidea">Orquídea (Orchidaceae)</string>
    <string name="txtorquidea">La orquídea es una flor trepadora de origen tropical perteneciente a la familia de las orchidaceae. Presentan hojas estrechas y alargadas con flores caracterizadas por su atractivo visual, debido al colorido que poseen. </string>
    <string name="txtorquidea2">Su flor es hermafrodita y tiene tres sépalos, dos pétalos y el labelo, que es la zona principal de polinización de insectos o aves. Es una flor originaria de Grecia, aproximadamente del año 375 a.C. Fueron muy populares y consideradas por los seres humanos desde la Antigüedad, conservándose escritos chinos donde aparece el cultivo de esta flor. </string>
    <string name="txtorquidea3">Las orquídeas necesitan estar ubicadas en lugares bien iluminados, pero sin recibir la luz directa del sol. La temperatura ideal para este tipo de plantas oscila entre los 12ºC y 25ºC, debido a que la mayor parte de ellas proceden de climas tropicales. Tienen que estar situadas en zonas ventiladas y húmedas para prevenir el ataque de bacterias. </string>
    <string name="txtorquidea4">El riego debe de ser abundante y diario, dependiendo de la especie que se trate. No es conveniente emplear aguas salinas ni calcáreas para regarlas, sino agua destilada o agua de lluvia.</string>
    <string name="nomorqui">Orquídea</string>
    <string name="nomcala">Calabaza</string>
    <string name="nommaiz">Maíz</string>
    <string name="nomzana">Zanahoria</string>
    <string name="regar">Regar</string>
    <string name="blueto">Conectar Sensor</string>
    <string name="bluetoff">Desconectar Sensor</string>
    <string name="none_paried">Sin dispositivo</string>
</resources>
